--- a/src/main/resources/templates/oauth/kakao/main.html
+++ b/src/main/resources/templates/oauth/kakao/main.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>소셜 로그인</h1>
-<a th:href="'https://kauth.kakao.com/oauth/authorize?scope=talk_message&response_type=code&client_id='+${restApiKey}+'&redirect_uri='+${redirectUri}">
+<a href="./kakao/login">
   <img src="/images/kakao_login_large_wide.png"/>
 </a>
 </body>
